--- a/nodejs/230810_sequelize_mvc/views/index.ejs
+++ b/nodejs/230810_sequelize_mvc/views/index.ejs
@@ -6,9 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <a href="/user/signin">로그인페이지</a>
-      <a href="/user/signup">회원가입페이지</a>
-    </div>
+    <h1>MVC</h1>
+    <a href="/visitor">방명록 남기기</a>
   </body>
 </html>
