--- a/nodejs/230810_sequelize_mvc/views/signin.ejs
+++ b/nodejs/230810_sequelize_mvc/views/signin.ejs
@@ -1,48 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <title>Sign In</title>
   </head>
   <body>
-    <h1>로그인</h1>
-    <form name="form_login">
-      <label for="userid">ID</label>
-      <input type="text" id="userid" /><br />
-      <label for="pw">PW</label>
-      <input type="password" id="pw" /><br />
-      <button type="button" onclick="login()">로그인</button>
-    </form>
-    <form action="/user/profile" method="post" name="form_profile">
-      <input type="hidden" name="profile" />
-    </form>
+    <!-- HTML 내용 -->
 
+    <!-- JavaScript 코드 -->
     <script>
-      function login() {
-        const form = document.forms["form_login"];
-        axios({
-          method: "POST",
-          url: "/user/signin",
-          data: {
-            userid: form.userid.value,
-            pw: form.pw.value,
-          },
-        }).then((res) => {
-          if (res.data.result) {
-            alert("로그인 성공");
-            const form_profile = document.forms["form_profile"];
-            form_profile.profile.value = form.userid.value;
-            form_profile.submit();
-          } else {
-            //window.location.href = '/user/signin'
-            //window.location.reload()
-            form.reset();
-          }
-          console.log("res", res);
-        });
-      }
+      // 페이지 로딩 후 실행되는 코드
+      document.addEventListener("DOMContentLoaded", () => {
+        // URL에 'loginFailed' 파라미터가 있을 경우 팝업 표시
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.has("loginFailed")) {
+          const popup = document.getElementById("popup");
+          popup.style.display = "block";
+        }
+      });
     </script>
   </body>
 </html>
